# serialization-benchmark

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  record.capnp  record.fbs  record.proto
msgpack/: record.hpp
